mobile nav block outside of header (HTML/CSS), fixed width of pricelist columns on desktop (CSS), decreased height of left block in services modal (CSS), decreased height of hero block on mobile (CSS)

--- a/src/scss/components/_block-pricelist.scss
+++ b/src/scss/components/_block-pricelist.scss
@@ -171,7 +171,7 @@
           }
 
           .item-name {
-            width: 60%;
+            width: 70%;
             padding-top: $spacing-unit;
             padding-bottom: $spacing-unit;
             padding-left: $spacing-gutter;
@@ -209,7 +209,7 @@
           }
 
           .item-btn {
-            width: 21%;
+            width: 11%;
             text-align: center;
           }
 
@@ -255,7 +255,7 @@
           }
 
           .item-name {
-            width: 60%;
+            width: 70%;
             padding-top: 0.875rem;
             padding-bottom: 0.875rem;
             padding-left: $spacing-gutter;
@@ -297,7 +297,7 @@
           }
 
           .item-btn {
-            width: 21%;
+            width: 11%;
             text-align: center;
           }
 
