--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -683,128 +683,6 @@
     }
   }
 
-  .navbar-mob-blocks {
-    display: none;
-    align-items: center;
-    width: 100%;
-    background-color: $m-white;
-    color: $m-white;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1030;
-
-    &__contact,
-    &__order,
-    &__services {
-      display: inline-block;
-      vertical-align: middle;
-      align-self: stretch;
-    }
-
-    &__contact,
-    &__order {
-      flex: 1 1 auto;
-    }
-
-    &__contact {
-      padding: 0.8125rem 0.625rem;
-      background-color: $m-black;
-      min-height: $fixed-tabl-navbar-height;
-      text-align: center;
-
-      .icon {
-        display: inline-block;
-        width: 1.875rem;
-        height: 1.875rem;
-        margin-right: 0.5rem;
-        background: transparent url("../img/icons/Phone-w.svg") no-repeat center center;
-        background-size: contain;
-        vertical-align: middle;
-      }
-
-      .text {
-        display: inline-block;
-        vertical-align: middle;
-        text-align: left;
-
-        &-link {
-          display: block;
-          margin-bottom: 0.25rem;
-          font-family: "Rubik-b", sans-serif;
-          font-size: 1.375rem;
-          font-weight: 700;
-          line-height: 1.18;
-          letter-spacing: 0.1em;
-          text-transform: uppercase;
-
-          &:hover {
-            text-decoration: none;
-            color: $m-white;
-          }
-        }
-
-        &-schedule {
-          display: block;
-          font-size: 0.75rem;
-          line-height: 1.17;
-          letter-spacing: 0.1em;
-          text-transform: uppercase;
-        }
-      }
-    }
-
-    &__order {
-      background-color: $m-red;
-
-      .m-btn {
-        width: 100%;
-        min-width: initial;
-        min-height: $fixed-tabl-navbar-height;
-        padding: 1.5rem 0.625rem;
-      }
-    }
-
-    &__services {
-      background-color: $m-white;
-
-      button {
-        display: inline-block;
-        width: auto;
-        padding: 1.125rem;
-        background-color: transparent;
-        border: none;
-        border-radius: 0;
-        vertical-align: middle;
-        font-size: 0;
-
-        &:focus {
-          outline: none;
-        }
-
-        * {
-          transition: $custom-transition-3;
-        }
-
-        .icon {
-          display: inline-block;
-          width: 2.125rem;
-          height: 2.125rem;
-          background: transparent url("../img/icons/menu.svg") no-repeat center center;
-          background-size: cover;
-          vertical-align: middle;
-        }
-
-        &:hover {
-          .icon {
-            background-image: url("../img/icons/menu-r.svg");
-          }
-        }
-      }
-    }
-  }
-
   @include media-breakpoint-down(lg) {
     padding: $header-padding-mobile 0;
     background-color: $m-white;
@@ -882,7 +760,7 @@
       padding: $header-padding-mobile 0;
     }
 
-    .navbar-mob-blocks {
+    & + .navbar-mob-blocks {
        display: flex;
     }
   }
@@ -911,51 +789,6 @@
           .text,
           &:after {
             display: none;
-          }
-        }
-      }
-    }
-
-    .navbar-mob-blocks {
-      &__contact {
-        padding: 0.625rem;
-        min-height: $fixed-mob-navbar-height;
-
-        .icon {
-          display: none;
-        }
-
-        .text {
-          &-link {
-            margin-bottom: 0;
-            font-size: 0.875rem;
-            line-height: 1.2;
-          }
-
-          &-schedule {
-            font-size: 0.625rem;
-            line-height: 1.2;
-          }
-        }
-      }
-
-      &__order {
-        .m-btn {
-          min-height: $fixed-mob-navbar-height;
-          padding-top: 0.875rem;
-          padding-bottom: 0.875rem;
-          font-size: 0.875rem;
-          line-height: 1.29;
-        }
-      }
-
-      &__services {
-        button {
-          padding: 0.8125rem;
-
-          .icon {
-            width: 1.5rem;
-            height: 1.5rem;
           }
         }
       }
@@ -1190,6 +1023,175 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.navbar-mob-blocks {
+  display: none;
+  align-items: center;
+  width: 100%;
+  background-color: $m-white;
+  color: $m-white;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030;
+
+  &__contact,
+  &__order,
+  &__services {
+    display: inline-block;
+    vertical-align: middle;
+    align-self: stretch;
+  }
+
+  &__contact,
+  &__order {
+    flex: 1 1 auto;
+  }
+
+  &__contact {
+    padding: 0.8125rem 0.625rem;
+    background-color: $m-black;
+    min-height: $fixed-tabl-navbar-height;
+    text-align: center;
+
+    .icon {
+      display: inline-block;
+      width: 1.875rem;
+      height: 1.875rem;
+      margin-right: 0.5rem;
+      background: transparent url("../img/icons/Phone-w.svg") no-repeat center center;
+      background-size: contain;
+      vertical-align: middle;
+    }
+
+    .text {
+      display: inline-block;
+      vertical-align: middle;
+      text-align: left;
+
+      &-link {
+        display: block;
+        margin-bottom: 0.25rem;
+        font-family: "Rubik-b", sans-serif;
+        font-size: 1.375rem;
+        font-weight: 700;
+        line-height: 1.18;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+
+        &:hover {
+          text-decoration: none;
+          color: $m-white;
+        }
+      }
+
+      &-schedule {
+        display: block;
+        font-size: 0.75rem;
+        line-height: 1.17;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  &__order {
+    background-color: $m-red;
+
+    .m-btn {
+      width: 100%;
+      min-width: initial;
+      min-height: $fixed-tabl-navbar-height;
+      padding: 1.5rem 0.625rem;
+    }
+  }
+
+  &__services {
+    background-color: $m-white;
+
+    button {
+      display: inline-block;
+      width: auto;
+      padding: 1.125rem;
+      background-color: transparent;
+      border: none;
+      border-radius: 0;
+      vertical-align: middle;
+      font-size: 0;
+
+      &:focus {
+        outline: none;
+      }
+
+      * {
+        transition: $custom-transition-3;
+      }
+
+      .icon {
+        display: inline-block;
+        width: 2.125rem;
+        height: 2.125rem;
+        background: transparent url("../img/icons/menu.svg") no-repeat center center;
+        background-size: cover;
+        vertical-align: middle;
+      }
+
+      &:hover {
+        .icon {
+          background-image: url("../img/icons/menu-r.svg");
+        }
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .navbar-mob-blocks {
+    &__contact {
+      padding: 0.625rem;
+      min-height: $fixed-mob-navbar-height;
+
+      .icon {
+        display: none;
+      }
+
+      .text {
+        &-link {
+          margin-bottom: 0;
+          font-size: 0.875rem;
+          line-height: 1.2;
+        }
+
+        &-schedule {
+          font-size: 0.625rem;
+          line-height: 1.2;
+        }
+      }
+    }
+
+    &__order {
+      .m-btn {
+        min-height: $fixed-mob-navbar-height;
+        padding-top: 0.875rem;
+        padding-bottom: 0.875rem;
+        font-size: 0.875rem;
+        line-height: 1.29;
+      }
+    }
+
+    &__services {
+      button {
+        padding: 0.8125rem;
+
+        .icon {
+          width: 1.5rem;
+          height: 1.5rem;
         }
       }
     }
