--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -210,6 +210,7 @@
 
       &.ver-category,
       &.ver-subcategory {
+        min-height: rem-calc(470);
         .hero-inner__search {
           //margin-bottom: 0.25rem;
 
@@ -226,6 +227,7 @@
       }
 
       &.ver-single {
+        min-height: rem-calc(470);
         .hero-inner__search {
           .form-inline {
             flex-wrap: wrap;
