--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -378,7 +378,7 @@
     //border-bottom: 1px solid $m-grey-dark;
 
     .nav-tabs {
-      max-height: rem-calc(500);
+      max-height: rem-calc(450);
       margin-left: -$spacing-gutter;
       background-color: $m-grey-lighter;
       border-bottom: none;
